# ark

./: .gitignore  Cargo.toml  README.md  ark.db  clippy.toml
.github/workflows/: ci.yml
src/: config.rs  control.rs  domain.rs  lib.rs  main.rs  workspace.rs
src/backend/: ids.rs  mod.rs  objects.rs
src/network/: listener.rs  mod.rs  recon.rs  sync.rs
src/storage/: blobs.rs  index.rs  mod.rs
tests/: backend_tests.rs  config_tests.rs  crash_consistency_tests.rs  domain_tests.rs  e2e_client_server_test.rs  gc_tests.rs  gossip_tests.rs  index_tests.rs  listener_tests.rs  partition_tests.rs  recon_tests.rs  store_tests.rs  sync_tests.rs  tiered_storage_tests.rs  workspace_tests.rs
