[package]
edition = "2024"
license = "MIT"
name = "ark"
version = "0.1.0"

[dependencies]
# async
tokio = { version = "1.49.0", features = ["full"] }

# storage
redb = { version = "3.1.0" }

# p2p / blobs
iroh-blobs = { version = "0.97.0", features = ["fs-store"] }
iroh = { version = "0.95.1" }

# utils
thiserror = { version = "2.0.17" }
serde = { version = "1.0.228" }
zerocopy = { version = "0.8.31", features = ["derive"] }
rkyv = { version = "0.8.12" }
bytecheck = { version = "0.8" }
rancor = { version = "0.1.1" }
anyhow = { version = "1.0.100" }
rand_chacha = { version = "0.9.0" }

# lint
[workspace.lints.clippy]
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
disallowed_types = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

[dev-dependencies]
tempfile = "3.24.0"
